objects/PrimaryGBUBatchConfig__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>PrimaryGBUBatchConfig</description>
    <fields>
        <fullName>Batch_Size__c</fullName>
        <label>Batch Size</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_Run_Date_Time__c</fullName>
        <label>Last Run Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Notification_Email_To__c</fullName>
        <label>Notification Email To</label>
        <type>Email</type>
    </fields>
    <label>PrimaryGBUBatchConfig</label>
</CustomObject>